# hello_world_playdate

./: .gitignore  CMakeLists.txt  main.c
hello_world.pdx/: pdxinfo
src/: main.c
src/chip8/: CMakeLists.txt
src/chip8/include/: chip8.h  chip8keyboard.h
src/chip8/src/: chip8.c  chip8keyboard.c  chip8memory.c  chip8screen.c  chip8stack.c
src/src/: CMakeLists.txt  chip8.c  chip8keyboard.c  chip8memory.c  chip8screen.c  chip8stack.c
